fix grid spacing

--- a/src/components/UiElements/UiRow/style.scss
+++ b/src/components/UiElements/UiRow/style.scss
@@ -1,4 +1,10 @@
 .ui-row {
     display: flex;
     flex-wrap: wrap;
+    &:not(.ui-row-no-gutters) {
+        .ui-col {
+            padding-left: 0.25rem;
+            padding-right: 0.25rem;
+        }
+    }
 }
